@@ -10,6 +10,7 @@
     find-as-you-type search options #85
     rename dialog name selection UTF-8 compliant #127
     replace G_VALUE_INIT macro #126
+    added file list Edit|Select By Pattern
 0.7.10  2012-07-25:
     added sort options #87 #37 #23
     completed russian translation ru.po
